<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpaceBalloon</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="empty_msg">No items found</string>
    <string name="camera_start">Start</string>
    <string name="camera_stop">Stop</string>
    <string name="created">date</string>
    <string name="gps">gps</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="altitude">altitude</string>
    <string name="datadetail_image">photos taken by this app.</string>
    <color name="black">#000000</color>

</resources>
